# ros-examples

./: CMakeLists.txt  README.md  package.xml
actions_examples/: CMakeLists.txt  package.xml
actions_examples/action/: RollDie.action
actions_examples/launch/: example_action_client.launch  example_action_server.launch
actions_examples/src/: example_action_client.py
actions_examples/test/: test_example_action_client.test  test_example_action_server.py  test_example_action_server.test
src/: example_action_server.py
