<?xml version="1.0"?>
<package format="2">
    <name>actions_examples</name>
    <version>0.0.1</version>
    <description>An example for ROS actions.</description>
    <maintainer email="emilyzho@usc.edu">Emily Zhou</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>rospy</build_depend>

    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <test_depend>rostest</test_depend>

</package>

